permit numbers are now auto-generated
