# Source/Zybach.Models/DataTransferObjects/ChemigationPermitUpsertDto.cs
@@ -4,11 +4,8 @@ namespace Zybach.Models.DataTransferObjects
 {
     public class ChemigationPermitUpsertDto
     {
-        public int ChemigationPermitNumber { get; set; }
         [Required]
         public int ChemigationPermitStatusID { get; set; }
-        [Required]
-        public string TownshipRangeSection { get; set; }
         [Required]
         public int CountyID { get; set; }
     }
